--- a/app/views/layout/dashboard.html.erb
+++ b/app/views/layout/dashboard.html.erb
@@ -25,7 +25,7 @@
         
           <dl>
             <dt>Signed in as</dt>
-            <dd><%= session.user.email %></dd>
+            <dd><%= session.user ? session.user.email : 'anonymous' %></dd>
           </dl>
         </div>
 				
