renamed flash files/objects to map server naming scheme

--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -16,10 +16,10 @@
     
     <div id="wrapper">
     <object id="game" classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" width="1000" height="645">
-      <param name="movie" value="game.swf" />
+      <param name="movie" value="linzblast.swf" />
       <param name="allowFullScreen" value="true" />
       <!--[if !IE]>-->
-      <object type="application/x-shockwave-flash" data="game.swf" width="1000" height="645">
+      <object type="application/x-shockwave-flash" data="linzblast.swf" width="1000" height="645">
       <param name="allowFullScreen" value="true" />
       <!--<![endif]-->
         <p>No Flash!</p>
