--- a/app/views/admin/posts/new.html.erb
+++ b/app/views/admin/posts/new.html.erb
@@ -9,7 +9,7 @@
       <legend><span>game</span></legend>
 
       <p>
-        <%= select :stage_id, :label => 'stage', :collection => Stage.all, :text_method => :name, :value_method => :id %>
+        <%= select :wall_id, :label => 'wall', :collection => Wall.all, :text_method => :name, :value_method => :id %>
       </p>
     
       <p>
