--- a/app/views/layout/dashboard.html.erb
+++ b/app/views/layout/dashboard.html.erb
@@ -11,6 +11,7 @@
 		<script type="text/javascript" src="/javascripts/jquery-ui/js/jquery-ui-1.7.2.custom.min.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.colorize-1.4.0.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.tablesorter.min.js"></script>
+		<script type="text/javascript" src="/javascripts/application.js"></script>
 		<script type="text/javascript" src="/javascripts/admin.js"></script>
     <%= include_required_js %>
   </head>
