fixed image links in admin show views

--- a/app/views/admin/styles/show.html.erb
+++ b/app/views/admin/styles/show.html.erb
@@ -15,8 +15,8 @@
 <label>ttl</label>
 <p><%=h @style.ttl %></p>
 
-<img src="<%= @style.image.url %>" alt="<%= @style.name %>" />
-<img src="<%= @style.symbol_image.url %>" alt="<%= @style.name %>" />
-<img src="<%= @style.crosshair_image.url %>" alt="<%= @style.name %>" />
+<img src="<%= @style.style_image.url %>" alt="<%= @style.name %>" />
+<img src="<%= @style.style_symbol_image.url %>" alt="<%= @style.name %>" />
+<img src="<%= @style.style_crosshair_image.url %>" alt="<%= @style.name %>" />
  
 <%= link_to 'all styles', resource(:admin, :styles) %>
