ajax.googleapis.com is too slow

--- a/app/views/layout/application.html.erb
+++ b/app/views/layout/application.html.erb
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/stylesheets/yui/reset-fonts.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="/stylesheets/yui/base-min.css" type="text/css" media="screen" charset="utf-8" />
     <link rel="stylesheet" href="/stylesheets/application.css" type="text/css" media="screen" charset="utf-8" />
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/swfobject/2.1/swfobject.js" />
+    <script type="text/javascript" src="/javascripts/swfobject.js" />
 		<%= include_required_js %>
   </head>
   <body>
