started refactoring js for file uploads

--- a/app/views/admin/styles/edit.html.erb
+++ b/app/views/admin/styles/edit.html.erb
@@ -1,6 +1,7 @@
 <% require_js(
   'jquery-uploadify/jquery.uploadify',
-  'styles/upload'
+  'upload',
+  'styles/edit'
 )
 %>
 
@@ -57,7 +58,7 @@
 
     </fieldset>
     
-    <%= submit "add" %>
+    <%= submit "update" %>
 
   <% end =%>
   
