--- a/app/views/admin/walls/new.html.erb
+++ b/app/views/admin/walls/new.html.erb
@@ -1,6 +1,7 @@
 <% require_js(
   'jquery-uploadify/jquery.uploadify',
-  'walls/upload'
+  'upload',
+  'walls/new'
 )
 %>
 
@@ -26,7 +27,7 @@
         <%= check_box :access_restricted, :label => "access restricted" %>
       </p>
 
-      <%= partial 'admin/shared/forms/image', :image_names => [ :image ], :upload_allowed => true %>
+      <%= partial 'admin/shared/forms/image', :image_names => [ :wall_image ], :upload_allowed => true %>
 
     </fieldset>
 
