--- a/app/views/layout/authentication.html.erb
+++ b/app/views/layout/authentication.html.erb
@@ -3,6 +3,73 @@
   <head>
     <title>linzblast :: admin</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    
+    <link rel="stylesheet" type="text/css" href="/stylesheets/yui/reset-fonts.css"/>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/yui/base-min.css"/>
+    
+    <link rel="stylesheet" type="text/css" href="/javascripts/jquery-ui/css/custom-theme/jquery-ui-1.7.1.custom.css" />v
+    <link rel="stylesheet" href="/javascripts/jquery-ui/css/ui-darkness/jquery-ui-1.7.2.custom.css" type="text/css" media="screen" charset="utf-8" />
+    <link rel="stylesheet" href="/stylesheets/admin.css" type="text/css" media="screen" charset="utf-8" />
+
+    
+    <style type="text/css">
+      /* START Login Form Styling */
+      #login-wrapper {
+        text-align: center;
+      }
+
+      #login {
+        background: #F58605 url(/images/admin/lock_128x128.png) no-repeat 100px 20px;
+        border: 10px solid;
+        border-color: #F58605;
+        -moz-border-radius: 10px;
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        width: 335px;
+        height: 340px;
+        margin:100px auto;
+        text-align: left;
+      }
+
+      #login.error {
+        /* background: #db5349 url(/images/admin/lock_128x128.png) no-repeat 100px 20px;
+        border: #db5349 10px solid;
+         */
+      }
+
+      #login form {
+        margin-left: 95px;
+        margin-top: 180px;
+      }
+
+      #login label {
+        color: #585858;
+      }
+      
+      #login.error label {
+        color: black;
+      }
+
+      #login input {
+        width: 145px;
+      }
+
+      #login p {
+        width: 145px;
+      }
+
+      #login-submit input  {
+        float: right;
+        margin-right: 0;
+      }
+
+      #login div.error {
+        display: none;
+      }
+
+      /* END Login Form Styling */
+    </style>
+    
   </head>
   
   <body>
